--- a/features/login/02_Verify Lupa Password Page.yaml
+++ b/features/login/02_Verify Lupa Password Page.yaml
@@ -1,6 +1,6 @@
 appId: com.she.sehatq
 ---
-- runFlow: ../common/precondition.yaml
+# - runFlow: ../common/precondition.yaml
 - runFlow: ./00_Verify Login Page.yaml
 - tapOn: "Lupa password?"
 - assertVisible: "Lupa Password"
