--- a/features/login/01_Verify Login with Valid Credentials.yaml
+++ b/features/login/01_Verify Login with Valid Credentials.yaml
@@ -10,7 +10,9 @@ appId: com.she.sehatq
 - assertVisible: "Password"
 - tapOn: "Email"
 - inputText: "alvinkresna@gmail.com"
+- back
 - tapOn: "Password"
 - inputText: "testsehatq"
+- back
 - tapOn:
     id: "com.she.sehatq:id/btn_login"
