--- a/features/login/09_Verify Login with Incorrect Password.yaml
+++ b/features/login/09_Verify Login with Incorrect Password.yaml
@@ -7,8 +7,10 @@ appId: com.she.sehatq
     id: "com.she.sehatq:id/iv_profile_nav"
 - tapOn: "Email"
 - inputText: "alvinkresna@gmail.com"
+- back
 - tapOn: "Password"
 - inputText: "testsehatqqqqq"
+- back
 - tapOn:
     id: "com.she.sehatq:id/btn_login"
 - assertVisible:
