--- a/features/login/07_Verify Login with Empty Email.yaml
+++ b/features/login/07_Verify Login with Empty Email.yaml
@@ -7,6 +7,7 @@ appId: com.she.sehatq
     id: "com.she.sehatq:id/iv_profile_nav"
 - tapOn: "Password"
 - inputText: "testsehatq"
+- back
 - tapOn:
     id: "com.she.sehatq:id/btn_login"
 - assertVisible:
