--- a/features/login/08_Verify Login with Empty Password.yaml
+++ b/features/login/08_Verify Login with Empty Password.yaml
@@ -7,6 +7,7 @@ appId: com.she.sehatq
     id: "com.she.sehatq:id/iv_profile_nav"
 - tapOn: "Email"
 - inputText: "alvinkresna@gmail.com"
+- back
 - tapOn:
     id: "com.she.sehatq:id/btn_login"
 - assertVisible: "Password minimal 6 karakter"
