--- a/features/login/10_Verify User Logout.yaml
+++ b/features/login/10_Verify User Logout.yaml
@@ -10,8 +10,10 @@ appId: com.she.sehatq
 - assertVisible: "Password"
 - tapOn: "Email"
 - inputText: "alvinkresna@gmail.com"
+- back
 - tapOn: "Password"
 - inputText: "testsehatq"
+- back
 - tapOn:
     id: "com.she.sehatq:id/btn_login"
 - tapOn:
